# ChangeLog for xfce-base/xfprint
# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfprint/ChangeLog,v 1.3 2003/07/26 07:42:36 vapier Exp $

*xfprint-3.99.2 (22 Jul 2003)

  22 Jul 2003; Brad Cowan <bcowan@gentoo.org> xfprint-3.99.2.ebuild:
  Version bump.

*xfprint-3.99.1 (15 Jul 2003)

  15 Jul 2003; Brad Cowan <bcowan@gentoo.org> xfprint-3.99.1.ebuild:
  New version and portage directory structure.

  14 Jun 2003; Brad Cowan <bcowan@gentoo.org> xfprint-3.90.0.ebuild:
  Added some deps brought to my attention by Mathy Vanvoorden.

*xfprint-3.90.0 (13 Jun 2003)

  13 Jun 2003; Brad Cowan <bcowan@gentoo.org> xfprint-3.90.0.ebuild:
  Initial import.
