@@ -1,2 +1,7 @@
-MD5 52297322ff214e08027f4883dbed7ea4 xffm-3.99.3.ebuild 1033
+MD5 f0722f8b879ce83f293677911666d601 xffm-3.99.2.ebuild 1032
+MD5 25141aecf37ae6632493c3bc021e4423 xffm-3.99.1.ebuild 1033
+MD5 31f374371140a828cb5a7bc9136212b1 xffm-3.99.3.ebuild 1033
+MD5 ffbf38d6625b5366e64a6f228e631123 ChangeLog 691
+MD5 4512d47aa5ae42262ccc57ffd37aa634 files/digest-xffm-3.99.1 64
+MD5 6a7ead32b50e5660aad757bfad31fec9 files/digest-xffm-3.99.2 64
 MD5 b857578f9a29347702d123448ebe4345 files/digest-xffm-3.99.3 64
