@@ -1,0 +1,35 @@
+# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/xffm/xffm-3.99.3.ebuild,v 1.1 2003/09/03 23:26:21 bcowan Exp $ 
+
+IUSE="samba"
+S=${WORKDIR}/${P}
+
+DESCRIPTION="Xfce4 file manager"
+HOMEPAGE="http://www.xfce.org/"
+SRC_URI="http://www.xfce.org/archive/xfce4-rc2/src/${P}.tar.gz"
+
+SLOT="0"
+LICENSE="GPL-2"
+KEYWORDS="~x86 ~ppc ~alpha ~sparc"
+
+DEPEND=">=x11-libs/gtk+-2.0.6
+	dev-util/pkgconfig
+	dev-libs/libxml2
+        =xfce-base/libxfce4util-${PV}
+        =xfce-base/libxfcegui4-${PV}
+        =xfce-base/libxfce4mcs-${PV}
+	=xfce-base/xfce-mcs-manager-${PV}
+	>=dev-libs/dbh-1.0.14"
+RDEPEND="samba? ( net-fs/samba )"
+
+src_compile() {
+	econf || die
+	make || die
+}
+
+src_install() {
+        make DESTDIR=${D} install || die
+                                                                                                                                           
+        dodoc AUTHORS INSTALL NEWS COPYING README ChangeLog TODO
+}
