@@ -1,5 +1,2 @@
-MD5 92e9a1bb07ac35a32c8b723c64556f31 files/digest-xfprint-3.99.1 66
-MD5 5c50fe66674535ef72fbeb2862e932fd files/digest-xfprint-3.99.2 66
-MD5 d0ee0ce6403e5eae2998d94c79fed9db xfprint-3.99.1.ebuild 971
-MD5 9e0decececb966dd74b9124856e4ce00 ChangeLog 733
-MD5 4c63e7ac913b77f832bebedf881f68a1 xfprint-3.99.2.ebuild 971
+MD5 fdc41cacf3d0c56430ffdd2fd9f46e86 xfprint-3.99.3.ebuild 971
+MD5 1ce36328b8013def3213b41b1ea4009b files/digest-xfprint-3.99.3 66
