@@ -1,6 +1,11 @@
 # ChangeLog for xfce-base/xfprint
 # Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfprint/ChangeLog,v 1.3 2003/07/26 07:42:36 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfprint/ChangeLog,v 1.4 2003/09/03 23:27:20 bcowan Exp $
+
+*xfprint-3.99.3 (03 Sep 2003)
+
+  03 Sep 2003; Brad Cowan <bcowan@gentoo.org> xfprint-3.99.3.ebuild:
+  Version bump.
 
 *xfprint-3.99.2 (22 Jul 2003)
 
